// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageCard Renders Dont UsageCard when kind=dont 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #d20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #d20600;
}

.emotion-8 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  box-sizing: border-box;
}

.emotion-10 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-10 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-11 {
  margin-bottom: 16px;
}

.emotion-12 {
  border-width: 0px;
  margin: 0;
  width: 100%;
}

.emotion-14 {
  font-family: "Source Serif Pro",serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.11145833333333338em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2958333333333334em;
}

.emotion-15 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #d20600;
}

.emotion-15 svg {
  fill: #d20600;
}

.emotion-17 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-17 svg {
  fill: #2e2e2e;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="flag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <svg
                aria-hidden="true"
                class="emotion-6 emotion-7"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-10"
        >
          <div
            class="emotion-11"
          >
            <hr
              aria-hidden="true"
              class="emotion-12"
              data-testid="divider"
            />
            <div
              class="emotion-11"
            />
            <section
              class="emotion-14"
            >
              <h1
                class="nk-headline-heading emotion-15"
              >
                Do not
              </h1>
            </section>
          </div>
          <div
            class="emotion-11"
          >
            <p
              class="emotion-17"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UsageCard Renders default (Do) UsageCard 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #0a782a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #0a782a;
}

.emotion-8 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  box-sizing: border-box;
}

.emotion-10 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-10 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-11 {
  margin-bottom: 16px;
}

.emotion-12 {
  border-width: 0px;
  margin: 0;
  width: 100%;
}

.emotion-14 {
  font-family: "Source Serif Pro",serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.11145833333333338em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2958333333333334em;
}

.emotion-15 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a782a;
}

.emotion-15 svg {
  fill: #0a782a;
}

.emotion-17 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-17 svg {
  fill: #2e2e2e;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="flag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <svg
                aria-hidden="true"
                class="emotion-6 emotion-7"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-10"
        >
          <div
            class="emotion-11"
          >
            <hr
              aria-hidden="true"
              class="emotion-12"
              data-testid="divider"
            />
            <div
              class="emotion-11"
            />
            <section
              class="emotion-14"
            >
              <h1
                class="nk-headline-heading emotion-15"
              >
                Do
              </h1>
            </section>
          </div>
          <div
            class="emotion-11"
          >
            <p
              class="emotion-17"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
